ssh-import-id (5.5) unreleased; urgency=medium

  * UNRELEASED

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 16 Feb 2016 16:54:15 -0800

ssh-import-id (5.4-0ubuntu1) xenial; urgency=medium

  * debian/rules:
    - disable python 3.5 tests;  fix ftbfs as unit tests try to import
      ssh_import_id, which is the module we're trying to build here

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 16 Feb 2016 16:54:14 -0800

ssh-import-id (5.3-0ubuntu1) xenial; urgency=medium

  * setup.py:
    - try fixing ftbfs by removing py_modules

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 16 Feb 2016 12:16:57 -0800

ssh-import-id (5.2-0ubuntu1) xenial; urgency=medium

  * debian/control:
    - try to fix ftbfs, seems we need python3-requests in the build stage

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 16 Feb 2016 11:24:48 -0800

ssh-import-id (5.1-0ubuntu1) xenial; urgency=medium

  * debian/control:
    - add shlibs to depends, hopefully fix ftbfs

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 11 Feb 2016 22:13:39 -0600

ssh-import-id (5.0-0ubuntu1) xenial; urgency=medium

  * === added directory etc, === added directory etc/ssh, === added
    directory ssh_import_id, === added directory usr, === added
    directory usr/bin, === added directory usr/share, === added
    directory usr/share/man, === added directory usr/share/man/man1,
    bin/ssh-import-id-gh => usr/bin/ssh-import-id-gh, bin/ssh-import-id-
    lp => usr/bin/ssh-import-id-lp, bin/ssh-import-id =>
    ssh_import_id/__init__.py (properties changed: +x to -x),
    debian/control, debian/install, debian/manpages, debian/rules, ===
    removed directory bin, setup.py, ssh-import-id.1 =>
    usr/share/man/man1/ssh-import-id.1, ssh_import_id =>
    etc/ssh/ssh_import_id, usr/bin/ssh-import-id:
    - build depend on dh-python
    - simplify package install, etc/ and usr/
    - syntax check both locations
    - build an ssh_import_id python package/module